# CashBack-Memory

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yaml  pyproject.toml
cashback_memory/db/: connection.py  crud.py  model.py
doc/: diagramms.drawio
references/: mcc_groups.json
scripts/: docker_build.sh  docker_run.sh  docker_stop.sh  get_last_version.sh  lint.sh  static-analysis.sh  testing.sh
tests/: conftest.py
tests/db/: test_crud.py  test_model.py
